# serializer version: 1
# name: test_all_entities
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 100.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_cover_reduction_when_covered',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Cover Reduction (when covered)',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Cover Reduction (when covered)',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_cover_reduction',
      'unique_id': 'neopool_1234567890_mbf_par_hidro_cover_reduction',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 100.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_hydrolisis_target_production_level',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolisis Target Production Level',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Hydrolisis Target Production Level',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro',
      'unique_id': 'neopool_1234567890_mbf_par_hidro',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 40.0,
        'min': 1.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_hydrolysis_shutdown_temp_threshold',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Hydrolysis Shutdown Temp. Threshold',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Hydrolysis Shutdown Temp. Threshold',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_shutdown_temperature',
      'unique_id': 'neopool_1234567890_mbf_par_hidro_shutdown_temperature',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 14.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 0.1,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_ph_max_limit',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH Max Limit',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.PH: 'ph'>,
      'original_icon': None,
      'original_name': 'pH Max Limit',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ph1',
      'unique_id': 'neopool_1234567890_mbf_par_ph1',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 14.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 0.1,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_ph_min_limit',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'pH Min Limit',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.PH: 'ph'>,
      'original_icon': None,
      'original_name': 'pH Min Limit',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'ph2',
      'unique_id': 'neopool_1234567890_mbf_par_ph2',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 1000.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_redox_setpoint',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Redox Setpoint',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.VOLTAGE: 'voltage'>,
      'original_icon': None,
      'original_name': 'Redox Setpoint',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'rx1',
      'unique_id': 'neopool_1234567890_mbf_par_rx1',
      'unit_of_measurement': 'mV',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 40.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_smart_lower_temperature',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Smart lower temperature',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Smart lower temperature',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'smart_temp_low',
      'unique_id': 'neopool_1234567890_mbf_par_smart_temp_low',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 40.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_smart_upper_temperature',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Smart upper temperature',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Smart upper temperature',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'smart_temp_high',
      'unique_id': 'neopool_1234567890_mbf_par_smart_temp_high',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 40.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_temperature_setpoint',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Temperature Setpoint',
      'options': dict({
      }),
      'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
      'original_icon': None,
      'original_name': 'Temperature Setpoint',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'heating_temp',
      'unique_id': 'neopool_1234567890_mbf_par_heating_temp',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
  ])
# ---
# name: test_setup_when_modules_absent
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'max': 100.0,
        'min': 0.0,
        'mode': <NumberMode.BOX: 'box'>,
        'step': 1.0,
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'number',
      'entity_category': <EntityCategory.CONFIG: 'config'>,
      'entity_id': 'number.pool_cover_reduction_when_covered',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Cover Reduction (when covered)',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Cover Reduction (when covered)',
      'platform': 'neopool',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'hidro_cover_reduction',
      'unique_id': 'neopool_1234567890_mbf_par_hidro_cover_reduction',
      'unit_of_measurement': '%',
    }),
  ])
# ---
